Fix view restriction text alignment

--- a/src/components/ViewRestriction/ViewRestriction.scss
+++ b/src/components/ViewRestriction/ViewRestriction.scss
@@ -8,5 +8,6 @@
     color: #858585;
     font-size: 30px;
     font-weight: 300;
+    text-align: center;
   }
 }
